--- a/OnlineSoccerShopping/ClientApp/package.json
+++ b/OnlineSoccerShopping/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.10.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
