uploading images to azure

--- a/OnlineSoccerShopping/appsettings.json
+++ b/OnlineSoccerShopping/appsettings.json
@@ -1,14 +1,19 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TMAGAR\\SQLEXPRESS;Database=aspnet-OnlineSoccerShopping;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=TMAGAR\\SQLEXPRESS;Database=OnlineSoccerShopping;Trusted_Connection=True;MultipleActiveResultSets=true",
+
+    "AzureStorageConnectionString": " "
+
   },
+  "AzureStorageContainerName": " ",
+
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "OnlineSoccerShopping": {
@@ -16,5 +21,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
