--- a/OnlineSoccerShopping/ClientApp/package.json
+++ b/OnlineSoccerShopping/ClientApp/package.json
@@ -11,11 +11,12 @@
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.1.1",
+    "reactstrap": "^9.1.6",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
