--- a/OnlineSoccerShopping/ClientApp/package.json
+++ b/OnlineSoccerShopping/ClientApp/package.json
@@ -9,10 +9,12 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-router-bootstrap": "^0.26.1",
